# LLMTranslator

./: .gitignore  CMakeLists.txt  LLMTranslator.iss  MainWindow.h  TranslatorEngine.cpp
.trae/documents/: Beautify UI with Modern Stylesheet.md  Beautify UI with QSS and GroupBoxes.md  Comparison Report_ gvisionqt_en.ts vs gvisionqt_en3.ts.md  Configure VS Code Debugging Environment (Windows_MSVC).md  Reorganize Project File Structure.md  Switch Debugger from proprietary cppvsdbg to standard cppdbg.md
docs/: UserManual.md
installer/: LLMTranslator.iss
resources/: generate_icon.py
src/: MainWindow.cpp  MainWindow.h  TranslatorEngine.cpp  TranslatorEngine.h  main.cpp
